Employee initial & other updated

--- a/Test Frontend/src/style/Gstyle.css
+++ b/Test Frontend/src/style/Gstyle.css
@@ -34,7 +34,7 @@
   }
 
   .bg {
-      background-image: url("./Images/bg.jpg");
+      background-image: url("../Images/bg.jpg");
   }
 
   .container1 {
