--- a/Test Frontend/src/style/Lstyle.css
+++ b/Test Frontend/src/style/Lstyle.css
@@ -1,3 +1,5 @@
+
+/*add employee*/
 .div{
  padding-top:7em;
 
@@ -8,14 +10,14 @@
  display: flex;
  justify-content: center;
 }
-.h3{
+.Lh3{
     padding:10px;
     font-size:20px;
     font-weight:bold;
     display: flex;
     justify-content: center;
 }
-form{
+.Lform{
     padding-left:250px;
     padding-right:250px;
     padding-bottom:30px;
@@ -25,15 +27,15 @@ form{
 #bankAccount{ 
      padding-bottom:30px;
 }
-Button { padding: 6px 50px;
+.LButton { padding: 6px 50px;
 }
-.error{
+.Lerror{
     color:	#FF0000 !important;
 }
 
 
-   
-    container{
+/*edit*/   
+    .Lcontainer{
         background: '#f5f5f5';
         padding-Top:100;
         padding-Right:200;
@@ -41,50 +43,48 @@ Button { padding: 6px 50px;
         margin:30;
         
     }
-    form{
+    .LPform{
     padding:30;
     }
-    subButton{
+    .subButton{
         padding-Left:30;
         padding-Right:30;
     }
 
+/*home*/    
     .div{
  background: #f5f5f5;
 min-height: 100vh;
 padding-top: 6em;
     }
-.table{
+.Ltable{
 padding:10px;
 font-size:15px;
 }
 
 
 
-
+/*NavBar*/
 .bg-dark {
-  background-color: #ffffff !important;
+  background-color: #333 !important;
 }
 .navbar {
-  padding: 0.55em 1em;
+  padding: 14px 16px;
 }
-image {
-  width: 10%;
-  height: 10%;
-  object-fit: scale-down;
-}
+
 .navbar-dark .navbar-nav .nav-link {
-  font-size: 1em;
-  padding-left: 4em;
+  font-size: 17px;
+  padding-left: 20px;
   justify-content: space-around;
   font-weight: bold;
   color: #00488f;
 }
 
+/*report*/
 .div-rep{
  background: #f5f5f5;
 min-height: 100vh;
-padding-top: 6em;
+padding-top: 20px;
 }
 .table{
 padding:10px;
